# anvil-uplink-cli

./: .gitignore  README.md  SECURITY.md  pyproject.toml
.github/workflows/: ci.yml
_verification/: 2026-04-21-anvil-uplink-cli-hypotheses.md  2026-04-21-anvil-uplink-cli-verification.md
_verification/probes/: probe_cli_surface.sh  probe_defect_regression.sh
docs/: impersonation.md  profiles.md  quickstart.md  security.md
docs/testing/: impersonation-manual-test-plan.md
skills/anvil-bridge/: SKILL.md
skills/anvil-bridge/references/: diagnostic-template.py
src/anvil_uplink_cli/: __init__.py  _runner.py  args.py  cli.py  config.py  connection.py  errors.py  serialize.py
src/anvil_uplink_cli/commands/: __init__.py  _tables.py  call.py  doctor.py  init.py  query.py  repl.py  row.py  run.py  tables.py
tests/: conftest.py  test_args.py  test_cli_smoke.py  test_config.py  test_connection.py  test_errors.py  test_scaffold.py  test_serialize.py
